plugins/kotlin/idea/tests/testData/checker/recovery/returnInFileAnnotation.kt
@file:<error descr="[UNRESOLVED_REFERENCE]">suppress</error>(<error descr="[RETURN_NOT_ALLOWED]"><error descr="[RETURN_NOT_ALLOWED]">return</error></error> <error descr="[UNRESOLVED_REFERENCE]"><error descr="[UNRESOLVED_REFERENCE]">a</error></error>)